--- a/src/components/MoviesCard/MoviesCard.module.css
+++ b/src/components/MoviesCard/MoviesCard.module.css
@@ -57,3 +57,9 @@
     list-style-type: none;
     border-bottom: 2px solid rgb(34, 88, 88);
 }
+.warning {
+    text-align: center;
+    font-weight: 500;
+    font-size: 24px;
+    color: red
+}
